# swept-volumes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example1.cpp  example2.cpp  swept-volumes-gui.cpp
data/experiments/: empty.txt
include/: func.cpp  func.h  inigo_example.cpp  inigo_example.h  read_transformation.cpp  read_transformation.h  swept_volume.cpp  swept_volume.h  write_transformation.cpp  write_transformation.h
